# Waveframe-Ledger

./: .gitignore  CHANGELOG.md  EVENT_ORDERING_SEMANTICS.md  EXECUTION_CONTEXT_MODEL.md  GOVERNANCE_CHRONOLOGY_REPLAY.md  GOVERNANCE_EVENT_MODEL.md  GOVERNANCE_OBJECT_MODEL.md  GOVERNANCE_SEMANTIC_RECONCILIATION.md  IDENTITY_AND_RESPONSIBILITY_MODEL.md  LEDGER_OPERATIONAL_MILESTONE.md  LEDGER_UI_ARCHITECTURE.md  LIFECYCLE.md  NON_GOALS.md  PROJECTION_DEPENDENCY_GRAPH.md  PROJECTION_OWNERSHIP.md  PROVENANCE.md  README.md  SEMANTICS.md  SEMANTIC_GOVERNANCE_MODEL.md  TEMPORAL_AND_STATE_CONTINUITY.md  UI_SEVERITY_SEMANTICS.md  pyproject.toml
contracts/: finance-policy-0.1.0.contract.json  finance_policy.publication_manifest.json
docs/: PUBLISHED_AUTHORITY_SPEC.md
governance_authoring/: __init__.py  contract_linkage.py  deployment.py  extract.py  lifecycle.py  patterns.py  pipeline.py  report.py  review.py
governance_ledger/: __init__.py  authority_contract.py  checks.py  cli.py  integration_paths.py  provenance.py  publish.py  registry.py  replay.py  runner.py  schema_versions.py  summary.py  ui_server.py  validation.py
policies/: database_deletion_policy.txt  deployment_policy.txt  finance_policy.txt  infrastructure_policy.txt
reviews/: database_deletion_policy.review.json  deployment_policy.review.json  finance_policy.deployed.review.json  finance_policy.review.json  infrastructure_policy.review.json
schemas/: active_authority_projection.v1.json  approval_chain_semantics.v1.json  authority_bundle.v1.json  authority_bundle_registry.v1.json  governance_actor.v1.json  (+51 more)
(+90 files in other folders)
