[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-authoring"
version = "0.1.0"
description = "Deterministic governance authoring and policy translation for CRI-CORE."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
    { name = "Waveframe Labs" }
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7"
]