[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-ledger"
version = "0.3.0"
description = "Governance compiler and semantic derivation infrastructure for deterministic governance operationalization."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"

authors = [
    { name = "Waveframe Labs" }
]

dependencies = [
    "cricore-contract-compiler>=0.3.0",
    "waveframe-guard>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7"
]

[project.scripts]
governance-ledger = "governance_ledger.cli:main"
governance-ledger-ui = "governance_ledger.ui_server:main"

[tool.setuptools.packages.find]
include = ["governance_ledger*"]
exclude = [
    "policies*",
    "generated*",
    "reviews*",
    "contracts*",
    "snapshots*",
    "schemas*",
    "tests*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
